--- a/.github/workflows/d.yml
+++ b/.github/workflows/d.yml
@@ -12,16 +12,30 @@ on:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+        dc:
+          - dmd-latest
+          - ldc-latest
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: dlang-community/setup-dlang@7c3e57bdc1ff2d8994f00e61b3ef400e67d2d7ac
-
-    - name: 'Build & Test'
-      run: |
-        # Build and run tests, as defined by `unittest` configuration
-        # In this mode, `mainSourceFile` is excluded and `version (unittest)` are included
-        # See https://dub.pm/package-format-json.html#configurations
-        dub test --compiler=$DC
+      - name: Setup D compiler
+        uses: dlang-community/setup-dlang@v1
+        with:
+          compiler: ${{ matrix.dc }}
+          
+      - name: Checkout source
+        uses: actions/checkout@v2
+        
+      - name: 'Build & Test'
+        run: |
+          # Build and run tests, as defined by `unittest` configuration
+          # In this mode, `mainSourceFile` is excluded and `version (unittest)` are included
+          # See https://dub.pm/package-format-json.html#configurations
+          dub test --compiler=$DC
